Benching for day 4

--- a/day_04/Cargo.toml
+++ b/day_04/Cargo.toml
@@ -4,5 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+divan = "0.1.16"
 eyre = "0.6.12"
 regex = "1.11.1"
+
+[[bench]]
+name = "day-04-bench"
+path = "benches/bench.rs"
+harness = false
