Benches for day 1, changing part_1/ part_2 puzzle inputs

--- a/day_01/Cargo.toml
+++ b/day_01/Cargo.toml
@@ -4,4 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+divan = "0.1.17"
 eyre = "0.6.12"
+
+[[bench]]
+name = "day-01-bench"
+path = "benches/bench.rs"
+harness = false
