--- a/day_06/Cargo.toml
+++ b/day_06/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "day_template"
+name = "day_06"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 divan = "0.1.16"
 eyre = "0.6.12"
+itertools = "0.13.0"
 
 [[bench]]
-name = "day-template-bench"
+name = "day-06-bench"
 path = "benches/bench.rs"
 harness = false
